<resources>
    <string name="app_name">Wimk</string>

    <string name="app_description">This is a mobile application for the use of food</string>
    <string name="inicioSesion">Log in</string>
    <string name="registro">Sing in</string>
    <string name="idioma">Language</string>
    <string name="notificacion">Notification</string>
    <string name="daltonico">Colorblind mode</string>
    <string name="vibracion">Vibration mode</string>
    <string name="volumen">Adjust volume</string>
    <string name="brillo">Adjust brightness</string>
    <string name="letra">Adjust font size</string>
    <string name="configuracion">Setting</string>
    <string name="nombreusuario">Username</string>
    <string name="contrasena">Password</string>
    <string name="recordarcontra">Remember password</string>
    <string name="olvidocontra">I forgot my password</string>
    <string name="nombre">First name</string>
    <string name="ingresar">Get in</string>
    <string name="crearperfil">Create Profile</string>
    <string name="repetirContrase">Repeat password </string>
    <string name="email">Email</string>
    <string name="apellido">Second name</string>
    <string name="guardar">Save</string>
    <string name="Bienvenido">Welcome</string>
    <string name="PulseFle">Please press the arrow to continue </string>
    <string name="VolverAtras">Are you sure you want to go back? </string>
    <string name="CerrarSesion">Are you sure you want to log out? </string>
    <string name="CambiosPerdidos">You will lose all changes</string>
    <string name="Si">YES </string>
    <string name="No">NO</string>
    <string name="Error">ERROR</string>
    <string name="DescripcError">An error has occurred</string>
    <string name="Vegetales">Vegetables</string>
    <string name="Fruta">Fruit</string>
    <string name="Carnes">Meat</string>
    <string name="FrutosSecos">Nuts/Cereals</string>
    <string name="Otros">Others</string>
    <string name="Pescados">Fish</string>
    <string name="Alergenos">Allergens?</string>
    <string name="Lechuga">Lettuce</string>
    <string name="Tomate">Tomatoe</string>
    <string name="Patata">Potato</string>
    <string name="Continuar">Continue</string>
    <string name="Aguacate">Avocado</string>
    <string name="Calabacin">Zucchini</string>
    <string name="Berenjena">Eggplant</string>
    <string name="Calabaza">Pumpkins</string>
    <string name="Acelga">Chard</string>
    <string name="Ajo">Garlic</string>
    <string name="Alcachofa">Artichoke</string>
    <string name="Apio">Celery</string>
    <string name="Repollo">Cabbage</string>
    <string name="Brecol">Broccoli</string>
    <string name="Cebolla">Onion</string>
    <string name="Coliflor">Cauliflower</string>
    <string name="Endibias">Endives</string>
    <string name="Esparragos">Asparagus</string>
    <string name="Espinacas">Spinach</string>
    <string name="JudiasVerdes">Green beans</string>
    <string name="Pepino">Cucumber</string>
    <string name="Pimiento">Peppers</string>
    <string name="Puerro">Leek</string>
    <string name="Remolacha">Beetroot</string>
    <string name="Setas">Mushrooms</string>
    <string name="Zanahoria">Carrot</string>
    <string name="Listo">Ok</string>
    <string name="Albaricoque">Apricot</string>
    <string name="Arandano">Blueberry</string>
    <string name="Breva">Fig</string>
    <string name="Cereza">Cherry</string>
    <string name="Ciruela">Plum</string>
    <string name="Endrina">Sloe</string>
    <string name="Frambuesa">Raspberry</string>
    <string name="Fresa">Strawberry</string>
    <string name="Granada">Grenade</string>
    <string name="Grosella">Currant</string>
    <string name="Higo">Fig</string>
    <string name="Lima">Lime</string>
    <string name="Limon">Lemon</string>
    <string name="Mandarina">Mandarin</string>
    <string name="Manzana">Apple</string>
    <string name="Melocoton">Peach</string>
    <string name="Melon">Cantaloupe</string>
    <string name="Membrillo">Quince</string>
    <string name="Mora">Blackberry</string>
    <string name="Naranja">Orange</string>
    <string name="Nispero">Medlar</string>
    <string name="Pera">Pear</string>
    <string name="Piña">Pineapple</string>
    <string name="Platano">Banana</string>
    <string name="Pomelo">Grapefruit</string>
    <string name="Sandia">Watermelon</string>
    <string name="Uva">Grape</string>
    <string name="CarneRoja">Red Meat</string>
    <string name="CarneBlanca">White Meat</string>
    <string name="Ternera">Veal</string>
    <string name="Toro">Beef</string>
    <string name="Caballo">Horsemeat</string>
    <string name="Cerdo">Pork </string>
    <string name="PatoGanso">Duck and Goose </string>
    <string name="Cabra">Goat </string>
    <string name="Cordero">Lamb </string>
    <string name="Pollo">Chicken </string>
    <string name="Pavo">Turkey </string>
    <string name="Conejo">Rabbit  </string>
    <string name="Almendras"> Almonds</string>
    <string name="Avellanas">Hazelnuts</string>
    <string name="Anacardos">Cashews</string>
    <string name="Cacahuetes">Peanuts</string>
    <string name="Castañas">Chestnuts </string>
    <string name="Nueces">Nuts </string>
    <string name="Piñones">Piñones</string>
    <string name="Pistachos">Pistachios</string>
    <string name="SemillaCalabaza">PumpkinSee </string>
    <string name="SemillasGirasol">Sunflower Seeds </string>
    <string name="Trigo">Wheat </string>
    <string name="Avena">Oatmeal </string>
    <string name="Cebada">Barley</string>
    <string name="Centeno">Rye </string>
    <string name="Quinoa">Quinoa </string>
    <string name="Espelta">Spelt </string>
    <string name="Maiz">Corn  </string>
    <string name="Arroz">Rice </string>
    <string name="HuevosGallina">Chicken eggs</string>
    <string name="HuevosCodorniz">Quail eggs </string>
    <string name="Soja">Soy sauce </string>
    <string name="miel">Honey </string>
    <string name="Jengibre">Ginger </string>
    <string name="Curry">Curry</string>
    <string name="Curcuma">Turmeric</string>
    <string name="Restricciones">Do you have any preferences? </string>
    <string name="VEgetar">Vegetarian options only</string>
    <string name="VEgana">Only vegan options </string>
    <string name="sinrestricc">No restrictions </string>
    <string name="Queapetecehoy">What do you want to do today?</string>
    <string name="Buscaringred">Search recipe by ingredients</string>
    <string name="CrearRece">Create recipe</string>
    <string name="Perfil">My profile</string>
    <string name="EligeIngre">Choose your ingredients</string>
    <string name="LegumPasta">Legumes/Pasta</string>
    <string name="PonerFiltros">Filters:</string>
    <string name="Buscar">Search </string>
    <string name="RecetasBusqueda">Recipes according to your search</string>
    <string name="Menu">Menu </string>
    <string name="NombreRece">Recipe name</string>
    <string name="Descripcion">Description</string>
    <string name="Etiquetas">Add tags</string>
    <string name="CambiarPrefe">Change preferences</string>
    <string name="ModificarRece">Modify recipes</string>
    <string name="Duracion">Maximum duration of the cooking recipe</string>
    <string name="Kcal">how many calories does it have?</string>
    <string name="ReceVege">Is a vegetarian recipe?</string>
    <string name="ReceVega">Is a vegan recipe?</string>
    <string name="ReceNormal">Neither vegetarian nor vegan recipe</string>
    <string name="PlatoPrin">It is a main dish</string>
    <string name="Postre">Is it a dessert?</string>
    <string name="SoloPlatoPrin">Only main dish</string>
    <string name="SoloPostre">Only desserts</string>
    <string name="Ambas">Vegan and vegetarian recipes</string>
    <string name="Enviar_email">Sent email</string>
    <string name="Introduzca_un_email">We will send you an email with instructions to recover it</string>
    <string name="Recuperar_contrasena">Recover password</string>
    <string name="Aumentarletra">+Increase font size</string>
    <string name="Disminuirletra">-Decrease the font size</string>
    <string-array name="parent_spinner_items">
        <item>Opción 1</item>

    </string-array>
    <string name="Introduceingre">Introduce the ingredients</string>
    <string name="instruccionesIngredientes">Enter the ingredients of the recipe separated by commas</string>
    <string name="Solopostres">Only deserts</string>


</resources>