<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cap.aplication.wimk.PantallaInicio">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_description"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/registro3"
            android:layout_width="131dp"
            android:layout_height="53dp"
            android:fontFamily="@font/letra"
            android:includeFontPadding="false"
            android:text="@string/Listo"
            android:textColor="@color/darkblue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:backgroundTint="@color/lightblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:strokeColor="@color/lightblue"
            tools:fontFamily="@font/letra" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/letra"
            android:text="@string/Fruta"
            android:textColor="@color/darkblue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="405dp"
            android:layout_height="343dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/Lechuga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/checkBox24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Albaricoque"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Arandano"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Cereza"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Breva"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Ciruela"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Endrina"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Frambuesa"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Mora"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Fresa"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Granada"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Grosella"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Higo"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Lima"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Limon"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Mandarina"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Manzana"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Melon"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Membrillo"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Naranja"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Nispero"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Pera"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Piña"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox45"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Platano"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox46"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Pomelo"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox47"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Sandia"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Uva"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>