<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cap.aplication.wimk.FrutosseCrear">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_description"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button444"
            android:layout_width="131dp"
            android:layout_height="53dp"
            android:fontFamily="@font/letra"
            android:includeFontPadding="false"
            android:text="@string/Listo"
            android:textColor="@color/darkblue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:backgroundTint="@color/lightblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:strokeColor="@color/lightblue"
            tools:fontFamily="@font/letra" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="361dp"
            android:layout_height="97dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/letra"
            android:text="@string/LegumPasta"
            android:textAlignment="center"
            android:textColor="@color/darkblue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="407dp"
            android:layout_height="291dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/Lechuga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/checkBox24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Almendras"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox49"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Avellanas"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Anacardos"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Cacahuetes"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Castañas"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Nueces"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Piñones"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox57"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Pistachos"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox58"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Avena"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Trigo"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox59"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/SemillasGirasol"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/SemillaCalabaza"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Centeno"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox63"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Quinoa"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox64"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Espelta"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox65"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Maiz"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />

                <CheckBox
                    android:id="@+id/checkBox66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra"
                    android:text="@string/Arroz"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/darkblue" />


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>